--- a/src/main/resources/templates/delete.html
+++ b/src/main/resources/templates/delete.html
@@ -12,9 +12,9 @@
 		</div>
 		<table class="purchase-table delete-table">
 			<tr>
-				<th>日付</th>
-				<th>商品</th>
-				<th>値段</th>
+				<th>支払日</th>
+				<th>商品名</th>
+				<th>金額</th>
 			</tr>
 			<tr>
 				<td th:text="${#temporals.format(purchase.purchaseDate, 'yyyy年M月d日')}"></td>
